Criação da Rota /postagens

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,7 @@
 <body>
     <nav id="navbar">
         <ul>
-            <li><a href="/blog"></a></li>
-            <li><a href="/Postagens">Postagens</a></li>
+            <li><a href="/blog/postagens">Postagens</a></li>
         </ul>
     </nav>
     {{{body}}}
