HTML de formulario

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,9 @@
 <body>
     <nav id="navbar">
         <ul>
+            <li><a href="/blog">Página Principal</a></li>
             <li><a href="/blog/postagens">Postagens</a></li>
+            <li><a href="/blog/criarconteudo">Criar Postagem</a></li>
         </ul>
     </nav>
     {{{body}}}
