--- a/views/blogs/formulario.handlebars
+++ b/views/blogs/formulario.handlebars
@@ -1,4 +1,4 @@
-<form action="/blog/criarconteudo">
+<form action="/blog/criarconteudo" method="post">
 
 <div class="formulario">
     <label for="autor">Nome do autor:</label>
