--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,8 @@
             <li><a href="/blog/criarconteudo">Criar Postagem</a></li>
         </ul>
     </nav>
-    {{{body}}}
+    <div class="container">
+        {{{body}}}
+    </div>
 </body>
 </html>
