--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,12 +58,12 @@
 }
 .formulario input[type='submit'],
 .btn {
+  margin-top: 1em;
   background-color: #0a4592;
   color: #fff;
-  padding: 0.7em 1.5em;
+  padding: 0.5em 1.0em;
   font-weight: bold;
-  border-radius: 5px;
-  border: none;
+  
   cursor: pointer;
   
 }
