--- a/views/blogs/postagens.handlebars
+++ b/views/blogs/postagens.handlebars
@@ -8,6 +8,7 @@
     <div class="postagem">
         <h2><a href="/blog/{{this._id}}">{{this.titulo}}</a></h2>
         <h5>por: {{this.autor}}</h5>
+        <h5><a href="/blog/editarconteudo/{{this._id}}">Editar</a></h5>
     </div>
     {{/each}}
 
